--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "RohitSai",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^129.0.0",
